# new-rust-project-template

./: Cargo.toml  Makefile.toml  README.md  bacon.toml  cargo-generate.toml  flake.nix  justfile  rust-toolchain.toml
