[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
license = "GPL-3.0-or-later"
repository = ""
readme = "README.md"
keywords = []
categories = []

# See more keys and their definitions at https: //doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
